WMG112519/force-app/main/default/objects/Location__c/fields/Criteria_ID__c.field-meta.xml
<CustomField>
    <fullName>Criteria_ID__c</fullName>
    <externalId>true</externalId>
    <label>Criteria ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>