WMG112519/force-app/main/default/objects/Location__c/fields/DMA_Region__c.field-meta.xml
<CustomField>
    <fullName>DMA_Region__c</fullName>
    <label>DMA Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>