WMG112519/force-app/main/default/objects/Location__c/fields/DMA_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>DMA_Region_Code__c</fullName>
    <label>DMA Region Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>